--- a/Romanian/main/Settings.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Settings.apk/res/values-ro/arrays.xml
@@ -399,7 +399,7 @@
         <item>modificare imagine de fundal</item>
         <item>asistent structură</item>
         <item>asistent captură de ecran</item>
-        <item>citește starea telefonului/item>
+        <item>citește starea telefonului</item>
         <item>adăugare căsuță vocală</item>
         <item>utilizare sip</item>
         <item>procesare apeluri</item>
