--- a/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/plurals.xml
@@ -103,5 +103,6 @@
     </plurals>
     <plurals name="resutl_function_install_app_summary">
         <item quantity="other">&lt;Data>"&lt;font color=#ff0000 >%d&lt;/font> aplicații nu au fost utilizate de mult timp; aruncați o privire."&lt;/Data></item>
+        <item quantity="one">&lt;Data>"&lt;font color=#ff0000 >%d&lt;/font> aplicație nu a fost utilizată de mult timp; aruncați o privire."&lt;/Data></item>
     </plurals>
 </resources>
