--- a/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/SecurityCoreAdd.apk/res/values-ro/arrays.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="switch_apps_entries">
-        <item>Utilizată în spațiul principal</item>
-        <item>Utilizată în spațiul curent</item>
+        <item>Utilizată în Spațiul Principal</item>
+        <item>Utilizată în Spațiul curent</item>
         <item>Utilizată în ambele spații</item>
     </string-array>
     <string-array name="switch_apps_title_confirms">
@@ -11,8 +11,8 @@
         <item>Atenție</item>
     </string-array>
     <string-array name="switch_apps_msg_confirms">
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul principal.</item>
-        <item>Datele aplicațiilor vor fi pierdute după mutarea în spațiul curent.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în Spațiul principal.</item>
+        <item>Datele aplicațiilor vor fi pierdute după mutarea în Spațiul curent.</item>
         <item>Aplicațiile sunt utilizate în ambele spații.</item>
     </string-array>
 </resources>
